--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,12 +3,32 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title><%= message %></title>
+    <title>Macskák</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <script src='main.js'></script>
 </head>
 <body>
-    <p><%= message %></p>
+    <form method="get">
+        <input type="text" name="szem_szín">
+        <input type="submit" value="Keresés">
+    </form>
+    <table>
+        <tr>
+            <th>Szeme színe</th><br>
+            <th>Súlya</th>
+        </tr>
+        <% for (let m of macskak){ %>
+            <tr>
+                <td>
+                    <%= m.szem_szin %>              
+                </td>
+                <td>
+                    <%= m.suly %>
+                </td>
+            </tr>
+        <% }; %>
+    </table>    
+    <a href="/cats/new">Uk macska lekérése</a>
 </body>
 </html>
